css/popup.css
html:not(imp):not(#imp) {
    background-color: rgb(32, 32, 32);
    --ml-background-background-color:ButtonBackground;
}

body {
    margin: 0;
    width: 680px;
    min-height: 600px;
    overflow: hidden!important;
    background-color: var(--main-background-color);
    --ml-background-background-color:Background;
}

@supports (zoom: 1)
{
    body
    {
        zoom: var(--popup-scale, 1);
    }
}

@supports not (zoom: 1)
{
    body:not([style*="--popup-scale:1"])
    {
        transform: scale(var(--popup-scale, 1));
        transform-origin: 0 0;
    }
}

@supports (-webkit-appearance: button)
{
    .firefox-only
    {
        display: none;
    }
}
@supports (-moz-appearance: button)
{
    .chrome-only
    {
        display: none;
    }
}

.ml-dialog-root {
    font: normal 14px/1 Arial, Helvetica, sans-serif;
    color: var(--main-color);
    text-shadow: 0 0 1px var(--main-text-shadow-color);
    --ml-svgbackground-fill:Text;
    /* height: 99%; */
    border: 1px solid var(--main-border-color);
}

.ml-dialog-logo {
    vertical-align: top;
    height: 32px;
    width: 32px;
    margin: -7px 0px 0px 0px;
    /* filter: drop-shadow(0px 0px 0px rgba(10,100,50,1)); */
    --ml-svgbackground-fill:Text;
}

.ml-dialog-header-text {
    display: inline-block;
    margin-top: 13px;
    line-height: 18px;
    /* vertical-align: top; */
}

.ml-dialog-header {
    font: normal 18px Arial, Helvetica, sans-serif;
    text-align: center;
    border-bottom: solid 1px var(--thin-border-color);
    background: var(--alt-background-color);
    position: relative;
    vertical-align: baseline;
    height: 47px;
    width: 678px;
    z-index: 100;
    /* box-shadow: 0 0 3px var(--main-shadow-color); */
}

.ml-dialog-footer {
    font: normal 18px Arial, Helvetica, sans-serif;
    border-top: solid 1px var(--thin-border-color);
    border-bottom: solid 1px var(--main-border-color);
    background: var(--alt-background-color);
    height: 40px;
    display: table;
    width: 678px;
    text-align: center;
    z-index: 100;
}

.ml-dialog-header span {
    color: var(--logo-text-color);
    text-shadow: 0 0 1px hsla(94, 100%, 70%, 0.8);
    vertical-align: baseline;
}

#hostState {
    vertical-align: baseline;
    display: inline-block;
}


/*.ml-dialog-header a {
     color: hsl(282, 100%, 50%);
    text-shadow: rgba(255, 255, 255, 0.8) 0px 0px 1px;
}*/

.ml-right-pane {
    display: table-cell;
    position: relative;
}

.ml-dialog-commands {
    border-left: solid 1px var(--thin-border-color);
    border-image: linear-gradient(90deg, var(--tab-item-border-color, var(--thin-border-color)) 0.5%, transparent 0.5%) 1;
    position: absolute;
    top: 145px;
    bottom: 0px;
    right: 0px;
    left: 0px;
    vertical-align: bottom;
    background-color: var(--main-background-color);
    /* width: 170px; */
}

.ml-dialog-settings {
    display: table;
    width: 678px;
    min-height: 500px;
    margin-bottom: 0px;
    margin-top: 0px;
}

.ml-dialog-settings-left {
    display: table-cell;
    padding: 10px;
    vertical-align: bottom;
}

.ml-dialog-settings-right {
    display: table-cell;
    padding: 10px;
    vertical-align: bottom;
}

.ml-dialog-commands>.ml-dialog-input-text {
    width: 121px;
    margin: 5px 20px 20px 20px;
    background-color: var(--content-background-color);
}

@supports (-moz-appearance: button)
{
    .ml-dialog-commands>.ml-dialog-input-text {
        width: 127px;
    }
}

.ml-dialog-commands>.ml-dialog-label {
    margin: 0px auto;
    text-align: center;
    display: block;
}

.ml-dialog-commands>button {
    margin: 20px 20px;
    width: 130px;
}
.ml-dialog-commands>.ml-tool-box {
    margin: 40px 20px 20px 20px;
    width: 130px;
}

.ml-dialog-input {
    margin: 8px calc((100% - 267px)/2) 18px calc((100% - 267px)/2);
}

.ml-dialog-input[type='checkbox']+.ml-dialog-label {
    margin: 5px;
}

.ml-replace-all-hues-label {
    position: absolute;
    display: inline-block;
    right: 37px;
    bottom: 32px;
    cursor: help;
    width: 80px;
    text-align: right;
    font-size: 12px;
    /* background: red; */
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .ml-replace-all-hues-label:not(#imp) {
    background-color: transparent!important;
}
.ml-replace-all-hues-label>.ml-checkbox {
    margin-left: 4px;
    margin-right: 0px;
    font-size: 10px;
}

.ml-dialog-label {
    margin-left: calc((100% - 267px)/2);
    cursor: help;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 299px;
    display: inline-block;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .ml-dialog-label:not(#imp) {
    background-color: transparent!important;
}
.ml-dialog-label.hue {
    position: relative;
}

.ml-dialog-label:after {
    content: ": " var(--input-string) "%";
    font-weight: bold;
}

.ml-dialog-label.time:after {
    content: ": " var(--input-string) ":00";
}

.ml-dialog-label.hue:after {
    content: ": " var(--input-string) "\00B0";
    /* position: absolute; */
    /* right: -40px; */
    /* width: 40px; */
}

.ml-dialog-label.hue:before {
    content: "-";
    position: absolute;
    background-color: hsl(var(--input-value),100%,50%);
    --ml-ignore:true;
    width: 15px;
    height: 15px;
    border-radius: 50%;
    right: -18px;
    color: hsl(calc(var(--input-value) + 180),100%,50%);
    transform: rotate(calc(0Deg - var(--input-degree)));
    text-align: right;
}

.ml-dialog-label.size:after {
    content: ": " var(--input-string) "px";
}

.ml-dialog-label.elements:after {
    content: ": " var(--input-string);
}

.ml-input-container {
    position: relative;
    margin-bottom: 15px;
    margin-top: 10px;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .ml-input-container:not(#imp) {
    background-color: transparent!important;
}

.ml-input-container:last-of-type {
    margin-bottom: 0px;
}

.ml-input-container:last-of-type :last-child {
    margin-bottom: 0px;
}
/* ... */

